--- a/DnsManager-Webapp/templates/index.html
+++ b/DnsManager-Webapp/templates/index.html
@@ -36,8 +36,8 @@
         
                             <div class="col-12 my-2" dir="ltr">
                                 <div class="input-group mb-3">
-                                    <button onclick="showFrame(this);" class="input-group-text bg-success seach-me" id="basic-addon1">جستجو</button>
-                                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                                    <button onclick="showFrame(this);" class="input-group-text bg-success search-me" id="basic-addon1">Search</button>
+                                    <input type="text" class="form-control" placeholder="Search here" aria-label="Username" aria-describedby="basic-addon1">
                                 </div>
                                 <div style="max-height: 540px;height:1px">
                                     <iframe src="" style="width: 100%;" class="" frameborder="0"></iframe>
@@ -125,8 +125,8 @@
             let temp = `
             <div class="col-12 my-2" dir="ltr">
                     <div class="input-group mb-3">
-                        <button  onclick="showFrame(this);" class="input-group-text bg-success seach-me" id="basic-addon1">جستجو</button>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                        <button  onclick="showFrame(this);" class="input-group-text bg-success search-me" id="basic-addon1">Search</button>
+                        <input type="text" class="form-control" placeholder="Search here" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                     
                     <div style="height:1px">
