--- a/DnsManager-Webapp/templates/index.html
+++ b/DnsManager-Webapp/templates/index.html
@@ -25,7 +25,7 @@
                         <div class="row d-flex justify-content-center align-items-center">
                             <div class="col-12 d-flex justify-content-between align-items-center">
                                 <label for="">
-                                جستجوی همه  
+                               Search All 
                                     <input type="radio" id="searchALL" >
                                 </label>
                                 <div>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="text-center overflow-auto" style="max-height: 640px" >
-                        <h4>انتخاب DNS با توجه به موقعیت</h4>
+                        <h4>All DNS Servers/h4>
                         <p> total: {{DNS_SERVERS_len}}</p>
                         {% for ip in DNS_SERVERS %}
                             {% if ip.ip == CURRENT_DNS %}
@@ -80,21 +80,7 @@
     <div class="alert-heading d-flex justify-content-between align-items-center">
 
         <a role="button" class="btn btn-close" data-bs-dismiss="alert"></a>
-        {% if category == "success" %}
-        <p class="me-5">عملیات با موفقیت انجام شد</p>
-        {% endif %}
-
-        {% if category == "info" %}
-        <p class="me-5">توجه</p>
-        {% endif %}
-
-        {% if category == "danger" %}
-        <p class="me-5">خطایی رخ داد</p>
-        {% endif %}
-
-        {% if category == "warning" %}
-        <p class="me-5">هشدار توجه کنید</p>
-        {% endif %}
+        <p class="me-5">Notification</p>
 
     </div>
     <hr class="m-0 p-0">
